--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Rebekah Lee</title>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to My Portfolio</h1>
-      <nav>
-          <ul>
-              <li><a href="#about">About Me</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#contact">Contact</a></li>
-          </ul>
-      </nav>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>This section contains information about me.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>This section will showcase my projects.</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Contact information goes here.</p>
-    </section>
-
-    <footer>
-        <p>Copyright © 2023 My Portfolio</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <title>Anthropology of Disability</title>
+</head>
+<body>
+    <nav class="container-fluid">
+        <ul>
+            <li><strong>Anthropology of Disability</strong></li>
+        </ul>
+        <ul>
+            <li><a href="#weekly-content">Course Content</a></li>
+            <li><a href="#projects">Student Projects</a></li>
+            <li><a href="#resources" role="button">Resources</a></li>
+        </ul>
+    </nav>
+    <main class="container">
+        <div class="grid">
+            <section>
+                <hgroup>
+                    <h2>Welcome to Anthropology of Disability</h2>
+                    <h3>A comprehensive exploration of disability in the social sciences.</h3>
+                </hgroup>
+                <p>This course examines the genealogy of disability as a topic in anthropology and related disciplines. Through the duration of this course, students will engage with key texts, contemporary ethnographies, and participate in events that highlight the intersection of disability with other forms of activism.</p>
+                <figure>
+                    <img src="https://source.unsplash.com/featured/?university,classroom" alt="Classroom Image">
+                    <figcaption>Photo by Unsplash</figcaption>
+                </figure>
+                <h3 id="weekly-content">Weekly Content</h3>
+                <p>Each week covers different aspects of the disability studies, exploring theories, key works, and modern applications in activism.</p>
+                <!-- Placeholder for weekly details -->
+                <div id="week-details">
+                    <!-- User will fill this section with specific content for each week -->
+                </div>
+                <h3 id="projects">Student Projects</h3>
+                <p>Discover projects from students as they explore the intricate connections between disability and societal constructs.</p>
+                <!-- Placeholder for student projects -->
+                <div id="project-details">
+                    <!-- User will add student projects here -->
+                </div>
+                <h3 id="resources">Additional Resources</h3>
+                <p>Resources including guest lectures, films, and related performances are listed here.</p>
+                <!-- Placeholder for resources -->
+                <div id="resource-links">
+                    <!-- User will add resource links here -->
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer class="container">
+        <small><a href="https://www.nyu.edu">NYU Official Website</a> • <a href="#">Top of Page</a></small>
     </footer>
-  </body>
+</body>
 </html>
